# apytizer

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: api.rst  conf.py  endpoint.rst  index.rst
docs/_static/css/: base.css  classes.css  methods.css
src/: __init__.py
src/abstracts/: api.py  endpoint.py  model.py
src/api/: decorators.py
src/apytizer/: __init__.py  http_methods.py  protocols.py
src/apytizer/abstracts/: __init__.py  abstract_api.py  abstract_endpoint.py  abstract_manager.py  abstract_model.py  abstract_session.py  abstract_state.py  api.py  endpoint.py  manager.py  model.py  session.py  state.py
src/apytizer/adapters/: __init__.py  transport.py  transport_adapter.py
src/apytizer/apis/: __init__.py  base_api.py  session_api.py
src/apytizer/base/: __init__.py  api.py  base_api.py  base_endpoint.py  base_manager.py  base_model.py  base_state.py  endpoint.py  manager.py  model.py  state.py
src/apytizer/decorators/: __init__.py  caching.py  connection.py  json.py  pagination.py
src/apytizer/endpoints/: __init__.py  base_endpoint.py  composite_endpoint.py  restful_endpoints.py
src/apytizer/managers/: __init__.py  base_manager.py
src/apytizer/models/: __init__.py  base_model.py
src/apytizer/utils/: __init__.py  caches.py  errors.py  generate_key.py  mappings.py  merge.py  objects.py  strings.py  typing.py
src/base/: __init__.py  adapters.py  api.py  decorators.py  endpoint.py  model.py  utils.py
src/decorators/: caching.py  connection.py  json.py  pagination.py
src/jira/: api.py
src/jira/endpoints/: attachments.py  issues.py
src/jira/models/: attachment.py
tests/: conftest.py  test_base_apis.py  test_base_endpoint.py  test_basic_api.py  test_basic_endpoint.py  test_decorators.py
tests/unit/: __init__.py  test_base_api.py  test_base_apis.py  test_base_endpoint.py  test_base_model.py  test_base_models.py  test_base_state.py  test_composite_endpoint.py  test_decorators.py  test_pagination_decorator.py  test_session_api.py  test_utils.py  test_utils_errors.py
