[metadata]
name = apytizer
version = attr: src.apytizer.__release__
author = Sean Sullivan
author_email = seansullivan@seanmedia.ca
long_description = file: README.md
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    cachetools
    requests

[options.packages.find]
where=src

[build_sphinx]
project = Apytizer
version = attr: src.apytizer.__version__
release = attr: src.apytizer.__release__
source-dir = docs
build-dir = build
builder = html
