[metadata]
name = apytizer
version = attr: src.apytizer.__release__
author = Sean Sullivan
author_email = seansullivan@seanmedia.ca
description = Implement wrappers quickly for REST APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanssullivan/apytizer
download_url = https://github.com/seanssullivan/apytizer/archive/refs/tags/v0.0.1-alpha.tar.gz
project_urls =
    Bug Tracker = https://github.com/seanssullivan/apytizer/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Natural Language :: English
    Operating System :: OS Independent

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    cachetools
    requests

[options.packages.find]
where=src

[build_sphinx]
project = Apytizer
version = attr: src.apytizer.__version__
release = attr: src.apytizer.__release__
source-dir = docs
build-dir = build
builder = html
